testsuite/tests/saks/should_fail/saks_fail020.stderr

saks_fail020.hs:9:49: error:
    • Expected kind ‘k’, but ‘a’ has kind ‘k0’
    • In the first argument of ‘Proxy’, namely ‘(a :: k)’
      In a standalone kind signature for ‘Foo2’:
        () -> forall (k :: Type) -> Proxy (a :: k)
